--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+.footer {
+ border-top:2px solid rgba(207, 219, 213, 1);
+ position: fixed;
+ width: 100%;
+ bottom: 0;
+ color: rgba(14, 52, 160, 1);
+ font-size: 25px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +44,5 @@
   to {
     transform: rotate(360deg);
   }
+
 }
