--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,7 +30,7 @@
 
 .footer {
  border-top:2px solid rgba(207, 219, 213, 1);
- position: fixed;
+ position: relative;
  width: 100%;
  bottom: 0;
  color: rgba(14, 52, 160, 1);
