--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+  background-color: black;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.navigation {
+  height: 10vh;
+  text-align: center;
 }
 
 .footer {
