--- a/client/src/components/About/AboutMe.module.css
+++ b/client/src/components/About/AboutMe.module.css
@@ -5,22 +5,29 @@
 }
 
 .image {
-  width: 100%;
+  /* width: 100%; */
   margin-right: 100px;
   overflow-y: hidden;
-  max-width: 440px;
+  /* max-width: 440px;
+  max-height: 440px; */
+  /* width: 500px; */
+  width: 500px;
+  height: 200px;
 }
 
 .image2 {
-  width: 100%;
+  /* width: 100%; */
+  margin-right: 100px;
   overflow-y: hidden;
-  max-width: 420px;
-  margin-right: 20px;
-  margin-bottom: 25px;
+  /* max-width: 440px;
+  max-height: 440px; */
+  /* width: 500px; */
+  width: 500px;
+  height: 200px;
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 1300px;
   margin: auto;
   overflow: auto;
   padding: 0 2rem;
@@ -53,7 +60,7 @@
 }
 
 .mainHeader p {
-  font-size: 2rem;
+  font-size: rem;
   overflow-y: hidden;
 }
 
@@ -62,7 +69,7 @@
   grid-template-columns: repeat(2, 1fr);
   background-color: rgba(207, 219, 213, 1);
   /* margin-bottom: 2rem; */
-  padding: 2rem 5rem;
+  padding: 4rem 5rem;
   overflow-y: hidden;
 }
 
@@ -129,7 +136,11 @@
   overflow-y: hidden;
 }
 
-@media screen and (max-width: 750px) {
+.left {
+  margin-right: 70px;
+}
+
+@media screen and (max-width: 480px) {
   .card {
     display: block;
   }
