--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   background-color: black;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .navigation {
@@ -16,8 +16,4 @@
   bottom: 0;
   color: rgba(14, 52, 160, 1);
   font-size: 25px;
-}
-
-.intake {
-
 }
