--- a/client/src/components/About/AboutMe.module.css
+++ b/client/src/components/About/AboutMe.module.css
@@ -5,33 +5,9 @@
 }
 
 .image {
-  /* width: 100%; */
-  margin-right: 100px;
   overflow-y: hidden;
-  /* max-width: 440px;
-  max-height: 440px; */
-  /* width: 500px; */
-  width: 500px;
+  width: 400px;
   height: 200px;
-}
-
-.image2 {
-  /* width: 100%; */
-  margin-right: 100px;
-  overflow-y: hidden;
-  /* max-width: 440px;
-  max-height: 440px; */
-  /* width: 500px; */
-  width: 500px;
-  height: 200px;
-}
-
-.container {
-  max-width: 1300px;
-  margin: auto;
-  overflow: auto;
-  padding: 0 2rem;
-  overflow-x: hidden;
 }
 
 .mainHeader {
@@ -51,6 +27,7 @@
   line-height: 1.2;
   font-size: 60px;
   overflow-y: hidden;
+  color: white;
 }
 
 .mainHeader h1 span {
@@ -60,21 +37,21 @@
 }
 
 .mainHeader p {
-  font-size: rem;
   overflow-y: hidden;
+  color: white;
 }
 
 .card {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   background-color: rgba(207, 219, 213, 1);
-  /* margin-bottom: 2rem; */
   padding: 4rem 5rem;
   overflow-y: hidden;
+  border: 1px solid rgb(125, 127, 129, 0.5);
 }
 
 .card h3 {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   overflow-y: hidden;
 }
 
@@ -87,8 +64,8 @@
 .card img {
   margin-bottom: 20px;
   margin-top: 25px;
-  margin-right: 20px;
   height: 350px;
+  object-fit: cover;
   overflow-y: hidden;
 }
 
@@ -98,11 +75,22 @@
 }
 
 .card > div {
-  padding: 2rem;
+  padding: 1rem;
   overflow-y: hidden;
 }
 
 .card:nth-child(even) img {
+  order: 2;
+  overflow-y: hidden;
+}
+
+.card:nth-child(even) {
+  order: 2;
+  overflow-y: hidden;
+  grid-gap: 50px;
+}
+
+.card:nth-child(even) span {
   order: 2;
   overflow-y: hidden;
 }
@@ -120,28 +108,55 @@
   overflow-y: hidden;
 }
 
-.description1 {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
-  margin-left: 50px;
-  margin-right: 50px;
-  overflow-y: hidden;
-}
-.description2 {
-  display: flex;
-  justify-content: space-between;
-  margin-left: 50px;
-  margin-right: 50px;
-  overflow-y: hidden;
-}
+@media screen and (max-width: 800px) {
+  * {
+    margin-left: 0px;
+    padding-left: 0px;
+  }
 
-.left {
-  margin-right: 70px;
-}
+  .header {
+    width: 100vw;
+  }
+  .container {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 
-@media screen and (max-width: 480px) {
+  .card > div {
+    width: 100vw;
+  }
   .card {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    align-items: center;
+    justify-content: center;
+  }
+  .card > img {
+    width: 100vw;
+  }
+
+  .card:nth-child(even) img {
+    order: 0;
+    overflow-y: hidden;
+    width: 100vw;
+  }
+
+  .description {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-x: hidden;
+  }
+
+  .form {
+    width: 100vw;
+  }
+  .card p {
+    width: 100vw;
+    overflow-x: hidden;
   }
 }
