--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -5,7 +5,7 @@ width: 100%
 .aboutSectionIntro{
         color: white;
         padding: 10%;
-        background-image: url('/Users/micahcole/Desktop/sbpt-nov-2022/projects/thomas-edwards/client/public/images/photo1.jpg');
+        background-image: url('../../images/photo1.jpg');
         margin-left: 4.5%;
         margin-right: 4.5%;
 }
