--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -1,17 +1,17 @@
-.mainPhoto{
-width: 100%
+.mainPhoto {
+  width: 100%;
 }
 
-.aboutSectionIntro{
-        color: white;
-        padding: 10%;
-        background-image: url('/Users/micahcole/Desktop/sbpt-nov-2022/projects/thomas-edwards/client/public/images/photo1.jpg');
-        margin-left: 4.5%;
-        margin-right: 4.5%;
+.aboutSectionIntro {
+  color: white;
+  padding: 10%;
+  background-image: url("../../images/photo1.jpg");
+  margin-left: 4.5%;
+  margin-right: 4.5%;
 }
 
-#aboutMeText{
-    color: white;
-    text-align: center;
-    margin:4%;
+#aboutMeText {
+  color: white;
+  text-align: center;
+  margin: 4%;
 }
