--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -1,22 +1,59 @@
-.mainPhoto{
-width: 100%
+*{
+    margin: 0;
+    /* border: 1px solid red; */
+}
+.container{
+    margin: 0;
+    padding: 0;
+}
+.mainPhoto {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
 
-.aboutSectionIntro{
-        color: white;
-        padding: 10%;
-        background: url(/Users/micahcole/Desktop/sbpt-nov-2022/projects/thomas-edwards/client/public/images/photo1.jpg) no-repeat center center;
-        width: auto;
-        height: auto;
-        min-height: 100%;
-        min-width: auto;
-        margin-left: 4.5%;
-        margin-right: 4.5%;
-        
+.aboutSectionIntro {
+    display: flex;
+    background: url('../../images/newImage1.jpeg');
+    background-position: center;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    margin: 0 1.7% 0 1.7%;
+    padding: 0;
+    color: #252d2d;
+}
+.aboutMeText {
+    display:flex;
+    color: #1a1f21;
+    justify-content: center;
+    margin-top: 50px;
+}
+#aboutMeTextDiv{
+    padding: 0px;
 }
 
-#aboutMeText{
-    color: white;
-    text-align: center;
-    margin:4%;
+#carousel {
+    width: 100vw;
+    height: 100vh;
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+    display: flex;
 }
+
+.container-fluid{
+    width: 100%;
+}
+
+#opaqueLayer{
+    display: flex;
+    background-color: #cddee5;
+    opacity: 40%;
+}
+
