--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,19 +1,29 @@
 .App {
   text-align: center;
-  background-color: black;
+  background-color: #252d2d;
+  accent-color: #17bcde;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.navigation {
-  height: 10vh;
-  text-align: center;
+.navigation a {
+  color: #17bcde;
+}
+
+.navigation a:hover {
+  color: white;
+  background-color: rgba(255, 255, 255, 0.07);
+}
+
+.navigation a:focus {
+  color: white;
+  background-color: rgba(255, 255, 255, 0.07);
 }
 
 .footer {
-  border-top:2px solid rgba(207, 219, 213, 1);
+  border-top:2px solid #cddee5;
   position: relative;
   width: 100%;
   bottom: 0;
-  color: rgba(14, 52, 160, 1);
+  color: #17bcde;
   font-size: 25px;
 }
