--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -1,32 +1,23 @@
 *{
     margin: 0;
-    /* border: 1px solid red; */
+    border: 1px solid red;
 }
+
 .container{
     margin: 0;
     padding: 0;
-}
-.mainPhoto {
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
 }
 
 .aboutSectionIntro {
     display: flex;
     background: url('../../images/newImage1.jpeg');
-    background-position: center;
     background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    width: 100%;
-    height: 100vh;
     overflow: hidden;
-    margin: 0 1.7% 0 1.7%;
-    padding: 0;
     color: #252d2d;
+    max-width: 100%;
+    height: 40%;
+    width: auto;
+    position: absolute;
 }
 .aboutMeText {
     display:flex;
@@ -36,15 +27,6 @@
 }
 #aboutMeTextDiv{
     padding: 0px;
-}
-
-#carousel {
-    width: 100vw;
-    height: 100vh;
-    background-size: cover;
-    margin: 0;
-    padding: 0;
-    display: flex;
 }
 
 .container-fluid{
