--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -1,11 +1,12 @@
 *{
     margin: 0;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .container{
     margin: 0;
     padding: 0;
+    border:0;
 }
 
 .aboutSectionIntro {
@@ -15,9 +16,8 @@
     overflow: hidden;
     color: #252d2d;
     max-width: 100%;
-    height: 40%;
+    height: 60%;
     width: auto;
-    position: absolute;
 }
 .aboutMeText {
     display:flex;
@@ -27,10 +27,13 @@
 }
 #aboutMeTextDiv{
     padding: 0px;
+    
 }
 
 .container-fluid{
     width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 #opaqueLayer{
