--- a/client/src/components/About/AboutMe.module.css
+++ b/client/src/components/About/AboutMe.module.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 
 .image {
@@ -38,7 +39,7 @@
 
 .mainHeader p {
   overflow-y: hidden;
-  /* color: white; */
+  color: #cddee5;
 }
 
 .card {
@@ -53,6 +54,7 @@
 .card h3 {
   margin-bottom: 1rem;
   overflow-y: hidden;
+  /* color: #cddee5; */
 }
 
 .card span {
@@ -72,6 +74,7 @@
 .card h3 {
   color: #17bcde;
   overflow-y: hidden;
+  
 }
 
 .card > div {
@@ -82,12 +85,14 @@
 .card:nth-child(even) img {
   order: 2;
   overflow-y: hidden;
+  
 }
 
 .card:nth-child(even) {
   order: 2;
   overflow-y: hidden;
   grid-gap: 50px;
+  
 }
 
 .card:nth-child(even) span {
@@ -158,5 +163,6 @@
   .card p {
     width: 100vw;
     overflow-x: hidden;
+    
   }
 }
