--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -1,11 +1,10 @@
 *{
-    margin: 0;
     /* border: 1px solid red; */
 }
 
 .container{
-    margin: 0;
-    padding: 0;
+    margin:0;
+    padding:0;
     border:0;
 }
 
@@ -27,7 +26,7 @@
 }
 #aboutMeTextDiv{
     padding: 0px;
-    
+    height: fit-content;
 }
 
 .container-fluid{
@@ -40,4 +39,14 @@
     display: flex;
     background-color: #cddee5;
     opacity: 40%;
+    height: 100%;
+    padding:30px;
+}
+
+#testimonialHeader{
+    padding-top: 10px;
+}
+
+.form-control{
+    padding: 10px;
 }
