changed background color

--- a/client/src/pages/Newsletter.css
+++ b/client/src/pages/Newsletter.css
@@ -1,6 +1,7 @@
+
 .newsletter-container {
-    background-color: #f7f7f7;
-    color: #2b2b2b;
+    background-color: #212529;
+    color: #c0b5b5;
 }
 
 .newsletter-container h2 {
