--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -75,6 +75,7 @@
   grid-template-columns: repeat(2, 1fr);
   padding: 2rem 5rem;
   overflow-y: hidden;
+  overflow-x: hidden;
   border: 1px solid rgb(125, 127, 129, 0.5);
 }
 
@@ -278,5 +279,17 @@ form input {
   .card p {
     width: 100vw;
     overflow-x: hidden;
+  }
+
+  .helpDescription {
+    display: none;
+  }
+  .help {
+    padding: 30px;
+    margin: 1px;
+  }
+  .button2 {
+    margin: 5px;
+    font-size: 12px;
   }
 }
