--- a/client/src/components/About/AboutMe.module.css
+++ b/client/src/components/About/AboutMe.module.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  
 }
 
 .image {
@@ -41,6 +40,10 @@
 .mainHeader p {
   overflow-y: hidden;
   color: #cddee5;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 10px;
+  margin-left: 8%;
 }
 
 .card {
@@ -82,7 +85,6 @@
 .card h3 {
   color: #17bcde;
   overflow-y: hidden;
-  
 }
 
 .card > div {
@@ -90,18 +92,15 @@
   overflow-y: hidden;
 }
 
-
 .card:nth-child(even) img {
   order: 2;
   overflow-y: hidden;
-  
 }
 
 .card:nth-child(even) {
   order: 2;
   overflow-y: hidden;
   grid-gap: 50px;
-  
 }
 
 .card:nth-child(even) span {
@@ -134,6 +133,12 @@
 
   .header {
     width: 100vw;
+  }
+
+  .p {
+    justify-content: center;
+    margin-bottom: 10px;
+    text-align: center;
   }
   .container {
     width: 100vw;
@@ -177,6 +182,5 @@
   .card p {
     width: 100vw;
     overflow-x: hidden;
-    
   }
 }
