--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -23,7 +23,7 @@
   position: absolute;
   left: 500px;
   color: #ffcd51;
-  font-size: 30rem;
+  /* font-size: 30rem; */
   top: 250px;
   width: 60%;
   text-align: center;
@@ -171,7 +171,7 @@ svg{
     position: absolute;
     left: 350px;
     color: #cddee5;
-    font-size: 3rem;
+    font-size: 3em;
     top: 200px;
     width: 60%;
     text-align: center;
