--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,7 +6,7 @@
 
 .nav{
   --bs-nav-link-color: #ffcd51;
-  background-color: #252d2d;
+  background-color: #16181e;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: #d2d5d1;
 }
