--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,23 +23,25 @@
   text-align: center;
   margin: 0 20px;
   padding: 0 10px; 
+  justify-content: space-evenly;
+  align-items: center;
+  opacity: .8;
+
   }
 
 /* height: 8vh;
   font-size: large;
   /* text-align: center; */
-  color: #c2cdc0;
+  /* color: #c2cdc0;
   background-color:#16181e; 
   border-bottom: 2px solid black;
-  opacity: .8;
-  justify-content: space-evenly;
-  align-items: center;
+  opacity: .8; */
   /* padding: 1em; */
-}
-.link:hover {
+
+/* .link:hover {
   /* color: white; */
-  background-color: rgba(255, 255, 255, 0.07);
-} */
+  /* background-color: rgba(255, 255, 255, 0.07);
+ */ 
 
 .link:hover {
   background-color: #ffcd51;
