--- a/client/src/pages/testimonials/Testimonials.module.css
+++ b/client/src/pages/testimonials/Testimonials.module.css
@@ -51,7 +51,8 @@
     grid-template-columns: repeat(2, 1fr);
     padding: 4rem 5rem;
     overflow-y: hidden;
-    border: 1px solid rgb(125, 127, 129, 0.5);
+    align-items: center;
+    /* border: 1px solid rgb(125, 127, 129, 0.5); */
   }
   
   .card:nth-child(even) img {
