--- a/client/src/components/About/AboutMe.module.css
+++ b/client/src/components/About/AboutMe.module.css
@@ -126,7 +126,6 @@
   margin-right: 10%;
 } */
 
-
 .inTouch {
   display: flex;
   justify-content: center;
@@ -141,15 +140,18 @@
   }
 
   .header {
+    overflow-x: hidden;
     width: 100vw;
   }
 
   .p {
+    overflow-x: hidden;
     justify-content: center;
     margin-bottom: 10px;
     text-align: center;
   }
   .container {
+    overflow-x: hidden;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -161,6 +163,7 @@
     width: 100vw;
   }
   .card {
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     width: 100vw;
@@ -168,10 +171,12 @@
     justify-content: center;
   }
   .card > img {
+    overflow-x: hidden;
     width: 100vw;
   }
 
   .card:nth-child(even) img {
+    overflow-x: hidden;
     order: 0;
     overflow-y: hidden;
     width: 100vw;
@@ -179,6 +184,7 @@
   }
 
   .description {
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -186,9 +192,11 @@
   }
 
   .form {
+    overflow-x: hidden;
     width: 100vw;
   }
   .card p {
+    overflow-x: hidden;
     width: 100vw;
     overflow-x: hidden;
   }
