--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -31,8 +31,7 @@
   top: 250px;
   width: 60%;
   text-align: center;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: Georgia, serif;
   font-size: 50px;
 }
 
@@ -47,8 +46,7 @@
 }
 
 .form h1 {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: Georgia, serif;
   color: black;
 }
 
@@ -67,8 +65,7 @@
   font-size: 15px;
   width: 50vw;
   border-radius: 50px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: Georgia, serif;
   /* opacity: 0.5; */
 }
 .button:hover {
@@ -105,6 +102,8 @@
 .card h3 {
   margin-bottom: 1rem;
   overflow-y: hidden;
+  font-family: Georgia, serif;
+
 }
 
 .card span {
@@ -129,6 +128,7 @@
 .card p {
   /* color: #cddee5; */
   color: #c8cbd0;
+  
 }
 
 .card > div {
@@ -138,6 +138,8 @@
 
 .titles {
   color: #cddee5;
+  font-family: Georgia, serif;
+
 }
 
 .span1 {
@@ -146,6 +148,7 @@
 
 .aboutThomas {
   color: #ffcd51;
+
 }
 
 /* ------ HOW I CAN HELP  ------ */
@@ -155,7 +158,7 @@
   justify-content: space-evenly;
   align-items: center;
   color: #cddee5;
-  margin: 5%;
+  /* margin: 5%; */
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   padding-right: 15px;
@@ -168,8 +171,7 @@
 
 .help button {
   border-radius: 50px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: Georgia, serif;
 }
 
 .buttonHelp:hover {
