--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,7 @@
   height: 8vh;
 }
 
-.nav{
+.nav {
   --bs-nav-link-color: #ffcd51;
   background-color: #16181e;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -22,26 +22,25 @@
   background-color: #16181e;
   text-align: center;
   margin: 0 20px;
-  padding: 0 10px; 
+  padding: 0 10px;
   justify-content: space-evenly;
   align-items: center;
-  opacity: .8;
-
-  }
+  opacity: 0.8;
+}
 
 /* height: 8vh;
   font-size: large;
   /* text-align: center; */
-  /* color: #c2cdc0;
+/* color: #c2cdc0;
   background-color:#16181e; 
   border-bottom: 2px solid black;
   opacity: .8; */
-  /* padding: 1em; */
+/* padding: 1em; */
 
 /* .link:hover {
   /* color: white; */
-  /* background-color: rgba(255, 255, 255, 0.07);
- */ 
+/* background-color: rgba(255, 255, 255, 0.07);
+ */
 
 .link:hover {
   background-color: #ffcd51;
@@ -49,7 +48,7 @@
 }
 
 .link {
-  padding: .5em;
+  padding: 0.5em;
 }
 .navbarbrand {
   margin: 0 3px;
@@ -78,6 +77,22 @@
 
 .media {
   display: none;
+}
+
+.buttonIntake {
+  font-size: 15px;
+  border-radius: 50px;
+
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  background-color: rgb(230, 228, 228);
+  padding: 9px 35px;
+}
+.buttonIntake:hover {
+  background-color: #ffcd51;
+  font-size: 15px;
+  /* width: 40vw; */
+  border-radius: 50px;
 }
 
 /*-----NAVBAR MEDIA QUIERES-----*/
