--- a/client/src/pages/Newsletter.css
+++ b/client/src/pages/Newsletter.css
@@ -17,7 +17,7 @@ body {
 /* Set styles for the header */
 .header {
     background-color: #212529;
-    color: #282d2d;
+    color: #c0b5b5;
     padding: 20px;
 }
 
