--- a/client/src/components/newsletter/SubscribeForm.css
+++ b/client/src/components/newsletter/SubscribeForm.css
@@ -47,7 +47,7 @@ form {
   }
   
   .newsletter-container {
-    background-color: #f7f7f7;
+    background-color: #282d2d;
     color: #2b2b2b;
 }
 
