--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -84,6 +84,10 @@
   background-color: #ffcd51;
 }
 
+#about-image{
+  display: flex;
+  justify-content: center;
+}
 /* ------ ABOUT ME CARD ------ */
 
 .boxIdea {
