--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,8 +22,7 @@
   color: #ffcd51;
   background-color: #16181e;
   text-align: center;
-  margin: 0 20px;
-  padding: 0 10px;
+  /* margin: 0 20px; */
   justify-content: space-evenly;
   align-items: center;
   opacity: 0.8;
@@ -78,6 +77,9 @@
   display: none;
 }
 
+.header {
+  color: #ffcd51; 
+}
 .media {
   display: none;
 }
