--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -23,10 +23,14 @@
   object-fit: cover;
 }
 
+.description {
+  color: #ffcd51;
+}
+
 .mainHeader {
   position: absolute;
   left: 500px;
-  color: #c2cdc0;
+  color: #ffcd51;
   /* font-size: 30rem; */
   top: 250px;
   width: 60%;
@@ -101,6 +105,7 @@
   overflow-y: hidden;
   overflow-x: hidden;
   border-bottom: 0.5px solid rgb(125, 127, 129, 0.5);
+  
 }
 
 .card h3 {
@@ -339,6 +344,7 @@ svg {
     flex-direction: column;
     align-items: center;
     overflow-x: hidden;
+    color: #ffcd51
   }
 
   .form {
