--- a/client/src/components/About/AboutMe.module.css
+++ b/client/src/components/About/AboutMe.module.css
@@ -19,7 +19,6 @@
   text-align: center;
   padding: 2rem;
   overflow-y: hidden;
-
 }
 
 .mainHeader h1 {
@@ -44,7 +43,7 @@
   justify-content: center;
   text-align: center;
   margin-bottom: 10px;
-  margin-left: 8%;
+  /* margin-left: 8%; */
 }
 
 .card {
@@ -52,8 +51,8 @@
   grid-template-columns: repeat(2, 1fr);
   padding: 4rem 5rem;
   overflow-y: hidden;
-  border-top: .5px solid rgb(125, 127, 129, 0.5);
-  border-bottom: .5px solid rgb(125, 127, 129, 0.5);
+  border-top: 0.5px solid rgb(125, 127, 129, 0.5);
+  border-bottom: 0.5px solid rgb(125, 127, 129, 0.5);
 }
 
 .card:nth-child(even) img {
@@ -127,6 +126,14 @@
   margin-right: 10%;
 } */
 
+.p {
+  overflow-x: hidden;
+  justify-content: center;
+  margin-bottom: 10px;
+  text-align: center;
+  max-width: fit-content;
+}
+
 .inTouch {
   display: flex;
   justify-content: center;
@@ -151,6 +158,7 @@
     margin-bottom: 10px;
     text-align: center;
   }
+
   .container {
     overflow-x: hidden;
     width: 100vw;
