--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -83,7 +83,11 @@
   background-color: #ffcd51;
 }
 
-#about-image{
+.header {
+  color: #ffcd51;
+}
+
+#about-image {
   display: flex;
   justify-content: center;
 }
