--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -18,7 +18,6 @@
   /* height: auto; */
   height: 60vh;
   width: 100%;
-  padding: 2%;
 
   object-fit: cover;
 }
@@ -103,12 +102,6 @@
   border-bottom: 0.5px solid rgb(125, 127, 129, 0.5);
 }
 
-.card h3 {
-  margin-bottom: 1rem;
-  overflow-y: hidden;
-  font-family: Georgia, serif;
-}
-
 .card span {
   margin-bottom: 2rem;
   overflow-y: hidden;
@@ -116,16 +109,20 @@
 }
 
 .card img {
+  position: relative;
+  left: 30px;
   margin-bottom: 20px;
   margin-top: 25px;
-  height: 350px;
+  height: 550px;
   object-fit: cover;
   overflow-y: hidden;
 }
 
 .card h3 {
-  color: #cddee5;
+  color: #ffcd51;
   overflow-y: hidden;
+  margin-bottom: 1rem;
+  font-family: Georgia, serif;
 }
 
 .card p {
@@ -136,11 +133,6 @@
 .card > div {
   padding: 1rem;
   overflow-y: hidden;
-}
-
-.titles {
-  color: #cddee5;
-  font-family: Georgia, serif;
 }
 
 .span1 {
@@ -208,7 +200,8 @@ svg {
 .titles {
   display: flex;
   justify-content: center;
-  color: #c8cbd0;
+  font-family: Georgia, serif;
+  color: #ffcd51;
 }
 
 .connect {
