--- a/client/src/components/About/AboutMe.module.css
+++ b/client/src/components/About/AboutMe.module.css
@@ -11,13 +11,13 @@
 }
 
 .mainHeader {
-  height: 35vh;
+  height: 35rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding: 2rem;
+  padding: .5rem;
   overflow-y: hidden;
 
 }
@@ -44,7 +44,6 @@
   justify-content: center;
   text-align: center;
   margin-bottom: 10px;
-  margin-left: 8%;
 }
 
 .card {
