--- a/client/src/pages/testimonials/Testimonials.module.css
+++ b/client/src/pages/testimonials/Testimonials.module.css
@@ -11,13 +11,13 @@
   }
   
   .mainHeader {
-    height: 35vh;
+    height: 35rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding: 2rem;
+    padding: .5rem;
     overflow-y: hidden;
   }
   
