--- a/client/src/components/About/AboutMe.module.css
+++ b/client/src/components/About/AboutMe.module.css
@@ -11,7 +11,7 @@
 }
 
 .mainHeader {
-  height: 25rem;
+  height: 15rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -77,7 +77,7 @@
 
 .card img {
   margin-bottom: 20px;
-  margin-top: 25px;
+  margin-top: 15px;
   height: 350px;
   object-fit: cover;
   overflow-y: hidden;
@@ -171,6 +171,7 @@
   .card > div {
     width: 100vw;
   }
+
   .card {
     overflow-x: hidden;
     display: flex;
@@ -181,6 +182,7 @@
   }
   .card > img {
     overflow-x: hidden;
+    height: auto;
     width: 100vw;
   }
 
