--- a/client/src/pages/testimonials/Testimonials.module.css
+++ b/client/src/pages/testimonials/Testimonials.module.css
@@ -51,6 +51,7 @@
     grid-template-columns: repeat(2, 1fr);
     padding: 4rem 5rem;
     overflow-y: hidden;
+    overflow-x: hidden;
     align-items: center;
     border-top: .5px solid rgb(125, 127, 129, 0.5);
   }
@@ -68,6 +69,7 @@
   
   .card p {
     color: #cddee5;
+    padding: 1rem;
   }
   .card span {
     margin-bottom: 2rem;
@@ -105,11 +107,14 @@
     order: 2;
     overflow-y: hidden;
     grid-gap: 50px;
+    overflow-x: hidden;
+
   }
   
   .card:nth-child(even) span {
     order: 2;
     overflow-y: hidden;
+    overflow-x: hidden;
   }
   
   .form {
