--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -18,8 +18,8 @@
   /* height: auto; */
   height: 60vh;
   width: 100%;
-
   object-fit: cover;
+  margin: 7px;
 }
 
 .description {
@@ -118,7 +118,7 @@
 
 .card img {
   position: relative;
-  left: 30px;
+  /* left: 30px; */
   margin-bottom: 20px;
   margin-top: 25px;
   height: 550px;
@@ -300,29 +300,36 @@ svg {
   * {
     margin-left: 0px;
     padding-left: 0px;
+    overflow-x: hidden;
   }
 
-  .header {
-    width: 100vw;
+  .mainPhoto {
+    height: 50vh;
+    width: 100%;
+    object-fit: cover;
   }
+
   .container {
-    width: 100vw;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
+    overflow-x: hidden;
+
+    margin: 0;
+    padding: 0;
+  }
+
+  .card {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
   }
 
   .card > div {
     width: 100vw;
   }
-  .card {
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
-    align-items: center;
-    justify-content: center;
-  }
+
   .card > img {
     width: 500px;
     height: 630px;
@@ -345,10 +352,6 @@ svg {
 
   .form {
     width: 100vw;
-  }
-  .card p {
-    width: 100vw;
-    overflow-x: hidden;
   }
 
   .helpDescription {
