--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -19,7 +19,9 @@
   height: 60vh;
   width: 100%;
   object-fit: cover;
-  margin: 7px;
+  padding: 0 7px;
+  overflow-x: hidden;
+  /* margin: 7px; */
 }
 
 .description {
@@ -158,7 +160,6 @@
   justify-content: space-evenly;
   align-items: center;
   color: #cddee5;
-  /* margin: 5%; */
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   padding-right: 15px;
@@ -221,78 +222,6 @@ svg {
 }
 
 /* ------ MEDIA QUIRES ------ */
-
-@media screen and (max-width: 1200px) {
-  .mainHeader {
-    position: absolute;
-    left: 350px;
-    color: #cddee5;
-    font-size: 3em;
-    top: 200px;
-    width: 60%;
-    text-align: center;
-  }
-}
-
-@media screen and (max-width: 1000px) {
-  .mainHeader {
-    position: absolute;
-    left: 350px;
-    color: #cddee5;
-    font-size: 40px;
-    top: 150px;
-    width: 60%;
-    text-align: center;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  .mainHeader {
-    position: absolute;
-    left: 300px;
-    color: #cddee5;
-    font-size: 35px;
-    top: 150px;
-    width: 60%;
-    text-align: center;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .mainHeader {
-    position: absolute;
-    left: 250px;
-    color: #cddee5;
-    font-size: 30px;
-    top: 80px;
-    width: 60%;
-    text-align: center;
-  }
-
-  @media screen and (max-width: 790px) {
-    .mainHeader {
-      position: absolute;
-      left: 250px;
-      color: #cddee5;
-      font-size: 30px;
-      top: 80px;
-      width: 60%;
-      text-align: center;
-    }
-  }
-
-  @media screen and (max-width: 700px) {
-    .mainHeader {
-      position: absolute;
-      left: 190px;
-      color: #cddee5;
-      font-size: 30px;
-      top: 80px;
-      width: 60%;
-      text-align: center;
-    }
-  }
-}
 
 /* MEDIA NEEDS WORK */
 
