Media Quieres Completed

--- a/client/src/components/About/AboutMe.module.css
+++ b/client/src/components/About/AboutMe.module.css
@@ -17,7 +17,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding: .5rem;
+  padding: 0.5rem;
   overflow-y: hidden;
 }
 
@@ -184,6 +184,7 @@
     overflow-x: hidden;
     height: auto;
     width: 100vw;
+    padding: 7px;
   }
 
   .card:nth-child(even) img {
