--- a/client/src/pages/testimonials/Testimonials.module.css
+++ b/client/src/pages/testimonials/Testimonials.module.css
@@ -9,6 +9,18 @@
     width: 400px;
     height: 200px;
   }
+
+  .main {
+    padding: 0;
+    position: relative;
+  }
+  
+  .mainPhoto {
+    height: 60vh;
+    width: 100%;
+  
+    object-fit: cover;
+  }
   
   .mainHeader {
     height: 15rem;
