--- a/client/src/pages/testimonials/Testimonials.module.css
+++ b/client/src/pages/testimonials/Testimonials.module.css
@@ -198,6 +198,7 @@
       flex-direction: column;
       align-items: center;
       overflow-x: hidden;
+      overflow-y: hidden;
     }
   
     .form {
