--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -58,7 +58,7 @@
 .input {
   font-size: 15px;
   width: 50vw;
-  border: 0.1px solid #989796;
+  /* border: 0.1px solid #989796; */
   /* opacity: 0.5; */
 }
 
@@ -109,7 +109,7 @@
   padding: 2rem 5rem;
   overflow-y: hidden;
   overflow-x: hidden;
-  border-bottom: 0.5px solid rgb(125, 127, 129, 0.5);
+  /* border-bottom: 0.5px solid rgb(125, 127, 129, 0.5); */
 }
 
 .card span {
@@ -242,7 +242,6 @@ svg {
     display: flex;
     justify-content: center;
     overflow-x: hidden;
-
     margin: 0;
     padding: 0;
   }
