--- a/client/src/pages/testimonials/Testimonials.module.css
+++ b/client/src/pages/testimonials/Testimonials.module.css
@@ -18,7 +18,7 @@
   .mainPhoto {
     height: 60vh;
     width: 100%;
-  
+    padding: 1%;
     object-fit: cover;
   }
   
@@ -65,7 +65,7 @@
     overflow-y: hidden;
     overflow-x: hidden;
     align-items: center;
-    border-top: .5px solid rgb(125, 127, 129, 0.5);
+    /* border-top: .5px solid rgb(125, 127, 129, 0.5); */
   }
   
   .card:nth-child(even) img {
