--- a/client/src/components/About/AboutMe.module.css
+++ b/client/src/components/About/AboutMe.module.css
@@ -184,6 +184,7 @@
     width: 100vw;
     align-items: center;
     justify-content: center;
+    padding: 0%;
   }
   .card > img {
     overflow-x: hidden;
