--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -62,8 +62,8 @@
   /* opacity: 0.5; */
 }
 
-.button1:hover {
-  background-color: #ffcd51;
+.formHelp {
+  width: 50%;
 }
 
 .button {
@@ -82,6 +82,7 @@
 
 .buttonStory {
   border-radius: 30px;
+  color: black;
 }
 
 .buttonStory:hover {
@@ -235,7 +236,7 @@ svg {
   .mainPhoto {
     height: 50vh;
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
   }
 
   .container {
@@ -245,6 +246,10 @@ svg {
     margin: 0;
     padding: 0;
   }
+  .formHelp {
+    width: 100%;
+  }
+  
 
   .card {
     display: flex;
@@ -256,6 +261,10 @@ svg {
 
   .card > div {
     width: 100vw;
+  }
+
+  .card img {
+    display: none;
   }
 
   .card > img {
@@ -288,6 +297,13 @@ svg {
   .help {
     padding: 30px;
     margin: 1px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: #cddee5;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  
   }
   .button2 {
     margin: 5px;
