--- a/client/src/pages/testimonials/Testimonials.module.css
+++ b/client/src/pages/testimonials/Testimonials.module.css
@@ -156,10 +156,10 @@
   }
   
   .mainPhoto {
-    height: 60vh;
-    width: 100%;
+    height: 75vh;
+    width: 100vw;
     padding: 1%;
-    object-fit: cover;
+    object-fit:cover; 
   }
   
   .mainHeader {
@@ -283,12 +283,29 @@
   
     .header {
       width: 100vw;
+      height: 75vh; 
+      padding: 0%;
+
+    }
+
+    .mainHeader {
+      height: 45vh;
+      padding: 0%;
+
+      
     }
   
+    .mainPhoto {
+      object-fit:contain;
+      padding-left: 2%;
+      padding-right: 2%;
+      padding-bottom: 0%;
+    }
     .p {
       justify-content: center;
       margin-bottom: 10px;
       text-align: center;
+      padding: 0%;
     }
     .container {
       width: 100vw;
